--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,223 @@
-div {
-    height: 200px;
-    width: 200px;
-    background-color: aquamarine;
-    color: red;
+/*
+  Josh's Custom CSS Reset
+  https://www.joshwcomeau.com/css/custom-css-reset/
+*/
+
+:root {
+    --bg-color: #ffffff;
+    --body-color: #f3f3f3;
+    --blue-text: #343c6a;
+    --font-poppins: "Poppins", sans-serif;
+    --gray-text: #b1b1b1;
+    --hover-blue: #2D60FF;
+
+    --filter-search-blue: brightness(0) saturate(100%) invert(56%) sepia(16%) saturate(871%) hue-rotate(179deg) brightness(95%) contrast(97%);
+    --filter-hover-blue: brightness(0) saturate(100%) invert(26%) sepia(78%) saturate(2865%) hue-rotate(222deg) brightness(101%) contrast(102%);
+}
+
+*, *::before, *::after {
+    box-sizing: border-box;
+}
+* {
+    margin: 0;
+    color: var(--blue-text);
+    font-family: "Inter", sans-serif;
+}
+body {
+    line-height: 1.5;
+    -webkit-font-smoothing: antialiased;
+}
+img, picture, video, canvas, svg {
+    display: block;
+    max-width: 100%;
+}
+input, button, textarea, select {
+    font: inherit;
+}
+p, h1, h2, h3, h4, h5, h6 {
+    overflow-wrap: break-word;
+}
+ 
+
+
+
+body {
+    display: grid;
+    column-gap: 2px;
+    grid-template: auto 1fr / 14rem 1fr;
+    height: 100vh;
+    background-color: var(--body-color);
+}
+
+@media (width <= 600px) {
+    body {
+        grid-template-columns: 6rem 1fr;
+    }
+}
+
+nav {
+    background-color: var(--bg-color);
+    grid-row: 1 / 3;
+    grid-column: 1 / 2;
+
+}
+
+#logo {
     display: grid;
     place-items: center;
-    font-weight: 800;
+    height: 4rem;
+
+}
+
+#logo div {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+#logo h3 {
+    font-weight: 900;
+    font-style: var(--font-poppins);
+    font-size: 1.8rem;
+}
+
+nav > div:last-of-type {
+    height: calc(100vh - 4rem);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 1rem 0;
+}
+
+nav ul li {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    margin-bottom: 1.2rem;
+    font-weight: 500;
+    cursor: pointer;
+}
+
+nav ul li div {
+    align-self: flex-start;
+    height: 2rem;
+    width: 6px;
+    background-color: #2D60FF;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+    visibility: hidden;
+}
+
+nav ul li:hover div {
+    visibility: visible;
+}
+
+nav ul li:hover p {
+    color: var(--hover-blue);
+}
+
+nav ul li:hover img {
+    filter: var(--filter-hover-blue);
+}
+
+
+
+nav ul li img {
+    margin-left: 2rem ;
+    margin-right: 1.4rem;
+}
+
+nav ul li p {
+    color: var(--gray-text)
+}
+
+ul {
+    list-style: none;
+    padding: 0;
+    width: 100%;
+}
+
+header {
+    background-color: var(--bg-color);
+    grid-row: 1 / 2;
+    grid-column: 2 / 3;
+    padding: 0.6rem 1rem;
+    display: grid;
+    grid-template-columns: 1fr 32rem;
+    align-items: center;
+}
+
+header > div {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+header > div > div {
+    height: 2.2rem;
+    width: 2.2rem;
+    border-radius: 50%;
+    background-color: var(--body-color);
+    display: grid;
+    place-items: center;
+    overflow: hidden;
+
+}
+
+img[src='./src/display-iamge.png'] {
+    width: 3rem;
+    height: auto;
+    
+}
+
+header > div div:first-of-type{
+    width: auto;
+    background-color: var(--body-color);
+    display: flex;
+    border-radius: 2.2rem;
+    align-items: center;
+    
+}
+
+img[src='./src/search-icon.svg'] {
+    height: 1.2rem;
+    width: auto;
+    margin: 0 0.8rem;
+    
+}
+
+img[src='./src/add-icon.svg']{
+    filter: var(--)
+}
+
+
+input {
+    height: 2.2rem;
+    width: 16rem;
+    background-color: var(--body-color);
+   
+    border-radius: 2.2rem;
+    border: none;
+}
+
+input:focus {
+    outline: none;
+   
+}
+
+.icon {
+    width: 1.4rem;
+    height: auto;
+}
+
+main {
+    grid-row: 2 / 3;
+    grid-column: 2 / 3;
+
+    display: grid;
+    grid-template-columns: 1fr 21.875rem;
+  
+} 
+
+aside {
+    background-color: pink;
 }
