--- a/styles.css
+++ b/styles.css
@@ -137,6 +137,10 @@ ul {
     width: 100%;
 }
 
+
+
+
+
 header {
     background-color: var(--bg-color);
     grid-row: 1 / 2;
@@ -145,28 +149,17 @@ header {
     display: grid;
     grid-template-columns: 1fr 32rem;
     align-items: center;
+    height: 4rem;
+}
+
+header h1 {
+    font-size: 1.4rem;
+    font-weight: 900;
 }
 
 header > div {
     display: flex;
     justify-content: space-evenly;
-}
-
-header > div > div {
-    height: 2.2rem;
-    width: 2.2rem;
-    border-radius: 50%;
-    background-color: var(--body-color);
-    display: grid;
-    place-items: center;
-    overflow: hidden;
-
-}
-
-img[src='./src/display-iamge.png'] {
-    width: 3rem;
-    height: auto;
-    
 }
 
 header > div div:first-of-type{
@@ -178,30 +171,45 @@ header > div div:first-of-type{
     
 }
 
-img[src='./src/search-icon.svg'] {
-    height: 1.2rem;
-    width: auto;
-    margin: 0 0.8rem;
-    
-}
 
-img[src='./src/add-icon.svg']{
-    filter: var(--)
-}
+header > div > div {
+    height: 2rem;
+    width: 2rem;
+    border-radius: 50%;
+    background-color: var(--body-color);
+    display: grid;
+    place-items: center;
+    overflow: hidden;
 
+}
 
 input {
     height: 2.2rem;
     width: 16rem;
     background-color: var(--body-color);
-   
+    font-weight: 400;
+    font-size: 0.8rem;
     border-radius: 2.2rem;
     border: none;
 }
 
+img[src='./src/display-iamge.png'] {
+    width: 3rem;
+    height: auto;
+    
+}
+
+
+img[src='./src/search-icon.svg'] {
+    height: 1.2rem;
+    width: auto;
+    margin: 0 0.8rem;
+}
+
+
 input:focus {
     outline: none;
-   
+     
 }
 
 .icon {
@@ -209,15 +217,76 @@ input:focus {
     height: auto;
 }
 
+
+
+
 main {
     grid-row: 2 / 3;
     grid-column: 2 / 3;
 
     display: grid;
-    grid-template-columns: 1fr 21.875rem;
+    grid-template-columns: 1fr 16rem;
+    padding: 1rem 1.5rem;
   
 } 
 
+
+
 aside {
-    background-color: pink;
+    
+
 }
+
+aside > div > div {
+   margin-top: 0.25rem;
+}
+
+#about-me {
+    /* background-color: rgb(214, 255, 214); */
+
+    > p {
+        font-size: 1rem;
+        font-weight: 700; 
+    }
+
+    > div {
+        background-color: var(--bg-color);
+        border-radius: 1.5rem;
+        padding: 1.2rem;
+        /* height: 12rem; */
+        text-overflow: ellipsis;
+        overflow: hidden;
+
+        p:first-of-type {
+            font-weight: 600;
+        }
+
+        div {
+            width: 100%;
+            height: 0.1rem;
+            background-color: var(--blue-text);
+            margin: 0.25rem 0;
+        }
+
+        p:last-of-type {
+            color: var(--gray-text);
+            font-size: 0.8rem;
+            line-height: 0.9rem;
+            cursor: pointer;
+        }
+
+        p:last-of-type:hover {
+            color: var(--blue-text);
+            text-decoration: underline;
+        }
+
+        
+    }
+
+}
+
+
+
+
+
+
