--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,9 @@
     --blue-text: #343c6a;
     --font-poppins: "Poppins", sans-serif;
     --gray-text: #b1b1b1;
+    --description-text: #718EBF;
     --hover-blue: #2D60FF;
+
 
     --filter-search-blue: brightness(0) saturate(100%) invert(56%) sepia(16%) saturate(871%) hue-rotate(179deg) brightness(95%) contrast(97%);
     --filter-hover-blue: brightness(0) saturate(100%) invert(26%) sepia(78%) saturate(2865%) hue-rotate(222deg) brightness(101%) contrast(102%);
@@ -238,7 +240,7 @@ aside {
 }
 
 aside > div > div {
-   margin-top: 0.25rem;
+   margin-bottom: 0.8rem;
 }
 
 #about-me {
@@ -254,7 +256,7 @@ aside > div > div {
         border-radius: 1.5rem;
         padding: 1.2rem;
         /* height: 12rem; */
-        text-overflow: ellipsis;
+        
         overflow: hidden;
 
         p:first-of-type {
@@ -284,6 +286,82 @@ aside > div > div {
     }
 
 }
+
+#front-end-stacks {
+    > p {
+        font-size: 1rem;
+        font-weight: 700; 
+    }
+
+    > div {
+        background-color: var(--bg-color);
+        border-radius: 1.5rem;
+        padding: 1.2rem;
+        /* overflow: hidden; */
+        display: grid;
+        grid-template-rows: repeat(3, 1fr);
+        row-gap: 0.8rem;
+        
+
+        >div {
+            display: grid;
+            grid-template-columns: 2.5rem 1fr;
+            column-gap: 0.8rem;
+            cursor: pointer;
+
+            > img {
+                height: 2.4rem;
+                width: auto;
+                justify-self: center;
+                transition: transform 250ms;
+                
+            }
+
+
+            
+            > div {
+                height: 2.5rem;
+                white-space: nowrap;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                width: 100%;
+
+
+                
+
+                h6 {
+    
+                   
+                    font-weight: 700;
+                    font-size: 1rem;
+                    color: var(--blue-text);
+                }
+
+                p {
+                    white-space: nowrap;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+                    font-size: 0.6rem;
+                    color: var(--description-text);
+                }
+
+      
+            }
+
+            
+        }
+
+        > div:hover p {
+            text-decoration: underline;
+        }
+
+        >div:hover img {
+            transform: scale(1.1);
+        }
+
+    }
+}
+
 
 
 
