--- a/styles.css
+++ b/styles.css
@@ -49,6 +49,7 @@ body {
     grid-template: auto 1fr / 14rem 1fr;
     height: 100vh;
     background-color: var(--body-color);
+    overflow: hidden;
 }
 
 @media (width <= 600px) {
@@ -61,6 +62,8 @@ nav {
     background-color: var(--bg-color);
     grid-row: 1 / 3;
     grid-column: 1 / 2;
+    
+    height: 100vh;
 
 }
 
@@ -228,24 +231,34 @@ main {
 
     display: grid;
     grid-template-columns: 1fr 16rem;
-    padding: 1rem 1.5rem;
+    padding: 0.8rem 1.5rem;
+    overflow-y: scroll;
+    overflow-x: none;
+    scrollbar-width: none;
   
 } 
 
 
 
 aside {
-    
+    position: sticky;
+    grid-column: 2/3;
+    top: 0;
+    left: 0;
+    align-self: start;
+    row-gap: 0.5rem;
+    display: grid;
+    grid-template-rows: auto auto 1fr;
+
+
 
 }
 
-aside > div > div {
-   margin-bottom: 0.8rem;
-}
+
 
 #about-me {
     /* background-color: rgb(214, 255, 214); */
-
+    
     > p {
         font-size: 1rem;
         font-weight: 700; 
@@ -356,10 +369,51 @@ aside > div > div {
         }
 
         >div:hover img {
-            transform: scale(1.1);
+            transform: scale(1.05);
         }
 
     }
+}
+
+.developer {
+    background: linear-gradient(90deg, rgba(28,187,255,1) 0%, rgba(79,243,254,1) 100%);
+    cursor: pointer;
+    transition: transform 300ms;
+    border-radius: 1.5rem;
+    overflow: hidden;
+    padding: 1.5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    height: calc(100vh - 33.5rem);
+    max-height: 26rem;
+    min-height: 208px;
+
+    > img:first-of-type {
+        height: auto;
+        width: 1rem;
+    }
+
+    > img:last-of-type {
+        height: auto;
+        width: 2rem;
+    }
+
+    h2 {
+        line-height: 0.8;
+        font-size: 2.2rem;
+        color: white;
+    }
+
+    .hire-me {
+        color: #edff7b;
+        
+    }
+}
+
+.developer:hover {
+    background: linear-gradient(0deg, rgba(28,187,255,1) 0%, rgba(79,243,254,1) 100%);
+    transform: scale(1.01);
 }
 
 
@@ -368,3 +422,11 @@ aside > div > div {
 
 
 
+
+
+
+#projects div {
+    height: 350px;
+    width: 322px;
+    background: linear-gradient(0deg, rgba(34,193,195,1) 0%, rgba(253,187,45,1) 100%);
+}
