--- a/styles.css
+++ b/styles.css
@@ -52,11 +52,13 @@ body {
     overflow: hidden;
 }
 
-@media (width <= 600px) {
+@media (width <= 850px) {
     body {
-        grid-template-columns: 6rem 1fr;
+        grid-template-columns: 4rem 1fr;
     }
 }
+
+
 
 nav {
     background-color: var(--bg-color);
@@ -238,6 +240,99 @@ main {
   
 } 
 
+main > section {
+    display: grid;
+    grid-template-rows: 3rem 1fr;
+
+
+}
+
+#projects {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-auto-rows: 350px;
+    gap: 1.2rem;
+    padding-right: 1.5rem;
+
+    
+
+    > div {
+        background-color: var(--bg-color);
+        border-radius: 1.5rem;
+        padding: 1.5rem;
+        display: grid;
+        place-items: center;
+        border-style: inset;
+        border: none;
+        border-bottom: 1.5rem solid var(--gray-text);
+        cursor: pointer;
+        
+    
+        > div {
+            width: 90%;
+            height: 100%;
+            max-width: 30rem;
+            margin: 0 auto;
+            display: flex; 
+            flex-direction: column;
+            justify-content: space-around;
+            
+
+            > p {
+                font-size: 1.2rem;
+                font-weight: 700;
+                color: var(--gray-text);
+            }
+
+            .screenshot {
+                width: 100%;
+                height: auto;
+                margin: 0.3rem auto;
+                border-radius: 1rem;
+                box-shadow: 4px 4px 0px 0px rgba(0,0,0,0.25);
+                
+                
+            }
+
+            .redirect-buttons {
+                display: flex;
+                justify-content: flex-end;
+
+                > a {
+
+                    img:last-of-type {
+                        margin-left: 1rem;
+                    }
+                }
+            }
+        }
+    }
+
+} 
+
+#projects > div:hover {
+    border-bottom: 1.5rem solid var(--hover-blue);
+}
+
+#projects > div:hover p {
+    color: var(--hover-blue);
+}
+
+#projects > div:hover .redirect-buttons img{
+    filter: var(--filter-hover-blue);
+}
+
+
+.disable {
+    cursor: not-allowed;
+    pointer-events: none;
+}
+
+.disable .screenshot {
+    filter: grayscale(1);
+}
+
+
 
 
 aside {
@@ -416,6 +511,20 @@ aside {
     transform: scale(1.01);
 }
 
+/* 
+@media (width <= 1045px) {
+    main {
+        grid-template-columns: 1fr;
+        grid-template-rows: auto auto;
+    }
+    aside {
+        grid-template-rows: auto;
+        grid-template-columns: repeat(3, 1fr);
+        align-self: end;
+        position: static;
+        grid-column: 1 / 2;
+    }
+} */
 
 
 
@@ -423,10 +532,3 @@ aside {
 
 
 
-
-
-#projects div {
-    height: 350px;
-    width: 322px;
-    background: linear-gradient(0deg, rgba(34,193,195,1) 0%, rgba(253,187,45,1) 100%);
-}
